tests/baselines/reference/duplicateConstructorOverloadSignature.errors.txt
==== tests/cases/compiler/duplicateConstructorOverloadSignature.ts (1 errors) ====
    class C {
        constructor(x: number);
        constructor(x: number);
        ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2145: Duplicate constructor overload signature.
        constructor(x: any) { }
    }